[package]
name = "s20_net_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
chrono = "0.4"
winapi = { version = "0.3.9", features = ["winuser", "windef", "processthreadsapi", "securitybaseapi", "winnt", "winerror", "libloaderapi"] }
log = "0.4.25"
simplelog = "0.12.2"
rand = "0.8"
libc = "0.2.169"
libloading = "0.8.6"
once_cell = "1.17.0"


