[package]
name = "s2o_net_lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
chrono = "0.4"
winapi = { version = "0.3.9", features = ["winuser", "windef", "processthreadsapi", "securitybaseapi", "winnt", "winerror", "libloaderapi", "winbase", "minwindef", "ntdef", "handleapi", "shellapi"] }
log = "0.4.25"
simplelog = "0.12.2"
rand = "0.8"
libc = "0.2.169"
libloading = "0.8.6"
once_cell = "1.17.0"
lazy_static = "1.4.0"

