[package]
name = "s2o_net_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["ifmib", "iphlpapi", "securitybaseapi", "errhandlingapi"] }
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.6"
speedtest-rs = "0.2.0"
socket2 = "0.4"
crossterm = "0.21"
cursive = "0.21.1"
windows-sys = "0.59.0"