[package]
name = "s2o_net_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
cursive = "0.21.0"
winapi = { version = "0.3.9", features = ["iphlpapi", "ifmib", "securitybaseapi", "errhandlingapi", "pdh"] }
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.6"
rand = "0.8.5"
lazy_static = "1.4.0"
simple_logger = "4.0.0"
simplelog = "0.12.0"
chrono = "0.4"